syntax = "proto3";

package proto;

/*-
 * ‌
 * Hedera Network Services Protobuf
 * ​
 * Copyright (C) 2018 - 2023 Hedera Hashgraph, LLC
 * ​
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * ‍
 */

import "timestamp.proto";
import "basic_types.proto";

option java_package = "com.hederahashgraph.api.proto.java";
// <<<pbj.java_package = "com.hedera.hapi.node.state.token">>> This comment is special code for setting PBJ Compiler java package
option java_multiple_files = true;

/**
 * Representation of a Hedera Token Service NFT in the network Merkle tree.
 */
message Nft {

    /**
     * The id of this NFT.
     */
    NftID nft_id = 1;

    /**
     * The account or contract id that owns this NFT.
     *
     * If this number is zero in state, the NFT is owned by its token type's current treasury.
     */
    AccountID owner_id = 2;

    /**
     * The account or contract id approved to spend this NFT.
     *
     * If this number is zero, there is no approved spender.
     */
    AccountID spender_id = 3;

    /**
     * The consensus time of the TokenMint that created this NFT.
     */
    Timestamp mint_time = 4;

    /**
     * The metadata of this NFT, up to 100 bytes; usually the UTF-8 encoding of a URI.
     */
    bytes metadata = 5;

    /**
     * If the owner of this NFT is not its token treasury, the id of the previous NFT 
     * in the owner's "doubly-linked list" of owned NFTs (if any).
     */
    NftID owner_previous_nft_id = 6;

    /**
     * If the owner of this NFT is not its token treasury, the id of the next NFT in 
     * the owner's "doubly-linked list" of owned NFTs (if any).
     */
    NftID owner_next_nft_id = 7;
}
